<resources>
    <string name="app_name">SCOS</string>
    <string name="action_settings">Settings</string>

    <string name="order" >点菜</string>
    <string name="unorder">退点</string>
    <string name="back">返回</string>

    <string name="foodname">菜品名称</string>
    <string name="foodprice">菜品价格</string>
    <string name="foodstock">菜品库存</string>
    <string name="fooddescription">菜品备注</string>
    
    <!--主界面的四个Button上的文字-->
    <string name="navigation">导航</string>
    <string name="main_order">点菜</string>
    <string name="main_vieworders">查看订单</string>
    <string name="main_loginorup">登录/注册</string>
    <string name="main_help">系统帮助</string>

    <!--登录/注册界面控件上的文字-->
    <string name="login_uid">登录名</string>
    <string name="login_pwd">登录密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_quit">退出</string>
    
    <!--帮助邮件编辑界面-->
    <string name="mail_subject">主题</string>
    <string name="mail_content">内容</string>
    <string name="mail_sendmail">发送</string>

    <!--FoodView界面的ActionBar上菜单项的Title-->
    <string name="foodview_menu_update">开启实时更新</string>
    <string name="foodview_menu_stop">关闭实时更新</string>
    <string name="foodview_menu_ordered">已点菜品</string>
    <string name="foodview_menu_viewOrders">查看订单</string>
    <string name="foodview_menu_help">呼叫帮助</string>

    <!--自定义通知-->
    <string name="noti_title">通知标题</string>
    <string name="noti_content">通知内容</string>
    <string name="noti_clear">清除</string>
</resources>
