<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--已点菜品-->
    <item
        android:id="@+id/foodview_menu_ordered"
        android:icon="@mipmap/ic_menu_ordered_unselected"
        app:showAsAction="ifRoom"
        android:title="@string/foodview_menu_ordered"/>
    <!--查看订单-->
    <item
        android:id="@+id/foodview_menu_vieworders"
        android:icon="@mipmap/ic_menu_vieworder_unselected"
        app:showAsAction="ifRoom"
        android:title="@string/foodview_menu_viewOrders"/>
    <!--呼叫帮助-->
    <item
        android:id="@+id/foodview_menu_help"
        android:icon="@mipmap/ic_menu_help"
        app:showAsAction="ifRoom"
        android:title="@string/foodview_menu_help"/>
    <!--开启实时更新-->
    <item
        android:id="@+id/foodview_menu_update"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom"
        android:title="@string/foodview_menu_update"/>
    <!--关闭实时更新-->
    <item
        android:id="@+id/foodview_menu_stop"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom"
        android:title="@string/foodview_menu_stop"/>

</menu>

