<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="es.source.code.activity.LoginOrRegister">

    <EditText
        android:id="@+id/et_uid"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/login_uid"
        android:ems="10"
        android:ellipsize="end"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_uid"
        android:layout_marginTop="40dp"
        android:hint="@string/login_pwd"
        android:ems="10"
        android:ellipsize="end"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="40dp"
        android:text="@string/login_login"/>

    <Button
        android:id="@+id/btn_login_quit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_login"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="40dp"
        android:text="@string/login_quit"/>

</RelativeLayout>