<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/rlayout_fooddetailed">

    <ImageView
        android:id="@+id/iv_fooddetailed_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:src="@drawable/food_default"/>

    <TextView
        android:id="@+id/tv_fooddetailed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_fooddetailed_image"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/iv_fooddetailed_image"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/foodname"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_fooddetailed_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fooddetailed_name"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/iv_fooddetailed_image"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/foodprice"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_fooddetailed_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fooddetailed_price"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/iv_fooddetailed_image"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/foodstock"
        android:textColor="@color/blue"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/et_fooddetailed_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/iv_fooddetailed_image"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:minLines="8"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:hint="@string/fooddescription"
        android:background="@drawable/food_detailed_et_style"/>

    <Button
        android:id="@+id/btn_fooddetailed_order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/et_fooddetailed_description"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/order"
        android:textColor="@drawable/main_txt_style"
        android:background="@drawable/main_btn_style"/>

</RelativeLayout>