<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_sendmail_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/mail_subject"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/et_sendmail_subject"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toEndOf="@+id/tv_sendmail_subject"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:minLines="1"
        android:maxLines="1"
        android:scrollbars="none"
        android:background="@drawable/food_detailed_et_style"/>

    <TextView
        android:id="@+id/tv_sendmail_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_sendmail_subject"
        android:layout_marginTop="20dp"
        android:text="@string/mail_content"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/et_sendmail_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tv_sendmail_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:minLines="8"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:background="@drawable/food_detailed_et_style"/>

    <Button
        android:id="@+id/btn_sendmail_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/et_sendmail_content"
        android:layout_marginTop="20dp"
        android:text="@string/mail_sendmail"
        android:textColor="@drawable/main_txt_style"
        android:background="@drawable/main_btn_style"/>
</RelativeLayout>